examples/test/testpolicy19062.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19062
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key47: value8
      key15: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value23
          key12: value31
          key15: value45
      podSelector:
        matchLabels:
          key40: value44
          key48: value25
